# frida-kotlin-binding

./: .gitignore  README.md  frida-core.h  plan.json  settings.gradle.kts
app/: build.gradle.kts
app/src/main/kotlin/dev/supersam/app/: App.kt
docs/: ARCHITECTURE.md  EXTENDING.md
frida/: build.gradle.kts
frida-api/: build.gradle.kts
frida-api/src/commonMain/kotlin/dev/supersam/frida/: FridaInterfaces.kt  FridaMessageParser.kt  FridaModels.kt
frida-gadget/: build.gradle.kts  download_gadget.sh
frida-gadget/src/main/kotlin/dev/supersam/frida/gadget/: FridaGadget.kt
frida-ios/: build.gradle.kts
frida-ios/src/iosMain/kotlin/dev/supersam/frida/: Frida.kt  FridaDevice.kt  FridaScript.kt  FridaSession.kt  FridaUtils.kt
frida-ios/src/nativeInterop/cinterop/: frida-core.def
frida-jvm/: build.gradle.kts
frida-jvm/src/main/cpp/: .gitignore  download_frida_devkit.sh
frida-jvm/src/main/kotlin/dev/supersam/frida/: FridaDevice.kt  FridaInterceptor.kt  FridaNative.kt  FridaReconnect.kt  FridaScript.kt  FridaSession.kt
frida/src/main/cpp/: CMakeLists.txt  Frida.i  download_frida_devkit.sh  frida_core.h  frida_jni.cpp
frida/src/main/java/dev/supersam/fridaSource/: FridaDeviceType.java  FridaScope.java  SWIGTYPE_p_FridaProcessQueryOptions.java  SWIGTYPE_p_GFunc.java  SWIGTYPE_p_GHashTable.java  SWIGTYPE_p__FridaApplication.java  SWIGTYPE_p__FridaApplicationList.java  SWIGTYPE_p__FridaApplicationQueryOptions.java  SWIGTYPE_p__FridaDevice.java  SWIGTYPE_p__FridaDeviceList.java  SWIGTYPE_p__FridaDeviceManager.java  SWIGTYPE_p__FridaProcess.java  SWIGTYPE_p__FridaProcessList.java  SWIGTYPE_p_gboolean.java  SWIGTYPE_p_void.java  frida.java  fridaJNI.java
frida/src/main/kotlin/dev/supersam/Jnr/: FridaLibraryInterface.kt
frida/src/main/kotlin/dev/supersam/frida/: Frida.kt  FridaApplication.kt  FridaDevice.kt  FridaDeviceType.kt  FridaLib.kt  FridaMessageParser.kt  FridaModels.kt  FridaNative.kt  FridaScript.kt  FridaSession.kt  NativeLoader.kt
gradle/: libs.versions.toml
